--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     </div>
 
     <script>
+        const fileList = ["ucp-nodes.txt", "dsinfo.txt", "ucp-proxy.txt", "dtr-registry-"];
+
         class Node {
             hostname;
             id;
@@ -35,8 +37,8 @@
             collect;
             orch;
             createdUpdated;
-            statusMsg;
             os;
+            statusMsg;
 
             constructor(node) { // json of node - "ucp-nodes.txt"
                 const na = 'N/A';
@@ -90,14 +92,68 @@
                 this.createdUpdated = [created, updated].join('/');
             }
 
-            getVersions(text) {
-                osType = '-';
-                osVersion = '---';
-                dsiOS = "No Info " // docker system info result
-                fullOSText = osType + '-' + osVersion + '/' + dsiOS
-                hpv = 'None'
+            getOSDetails(text) {
+                var osType = '-';
+                var osVersion = '---';
+                var dsiOS = "No Info " // docker system info result
+                var fullOSText = osType + '-' + osVersion + '/' + dsiOS
+                var hpv = 'None'
 
-                console.log("Version:", text);
+                text.split("\n").forEach(line => {
+                    line = line.trim();
+
+                    if (line.startsWith("Operating System:"))
+                    {
+                        dsiOS = line.split(': ')[1].trim();
+                        dsiOS = dsiOS.replace('Red Hat Enterprise Linux', 'RHEL');
+                        dsiOS = dsiOS.split('(')[0]; // RHEL 7.9 (Maipo) ==> RHEL 7.9
+                    }
+                    if (line.startsWith("NAME="))
+                    {
+                        osType = trimmer(line.split('=')[1].trim(), '"');
+                        if (osType.startsWith("Red"))
+                        {
+                            osType = "RHEL"
+                        }
+                    }
+                    if (line.startsWith("VERSION="))
+                    {
+                        osVersion = trimmer(line.split('=')[1].trim(), '"');
+                        osVersion = osVersion.split('(')[0].trim();
+                    }
+
+                    fullOSText = osType + '-' + osVersion + '/' + dsiOS;
+
+                    if (line.startsWith("Hypervisor vendor:"))
+                    {
+                        hpv = line.split(': ')[1].trim();
+                    }
+                });
+                fullOSText = (osType + '-' + osVersion + '/' + dsiOS).trim();
+                this.osVersion = fullOSText.trim();
+                this.hypervisor = hpv;
+            }
+
+            getMKEVersions(json) {
+                const keyword = "IMAGE_VERSION"
+                var env = json[0]['Config']['Env'];
+                env.forEach(key => {
+                    if (key.includes(keyword))
+                    {
+                        return key.split('=')[1];
+                    }
+                })
+            }
+
+            getMSRVersions(json) {
+                const keyword = "DTR_VERSION"
+                var env = json[0]['Config']['Env'];
+                env.forEach(key => {
+                    if (key.includes(keyword))
+                    {
+                        return key.split('=')[1];
+                    }
+                })
             }
 
             getVersions_Old(json) {
@@ -122,10 +178,24 @@
             }
         }
 
+        function trimmer(str, ch) {
+            var start = 0, 
+                end = str.length;
+
+            while(start < end && str[start] === ch)
+                ++start;
+
+            while(end > start && str[end - 1] === ch)
+                --end;
+
+            return (start > 0 || end < str.length) ? str.substring(start, end) : str;
+        }
+
         function createSDTable(nodes) {
-            var headers = ['Hostname', 'ID', 'Role', 'OS Version', 'HPVS', 'Avail', 'State', 'IP', 'MCR', 'MKE/MSR', 'Collect', 'Orch', 'Created/Updated', 'Status', 'OS']
+            var headers = ['Hostname', 'ID', 'Role', 'OS Version', 'HPVS', 'Avail', 'State', 'IP', 'MCR', 'MKE/MSR', 'Collect', 'Orch', 'Created/Updated', 'OS', 'Status']
 
             var table = document.createElement('table');
+            var headerBody = document.createElement('thead');
             var headerRow = document.createElement('tr');
 
             headers.forEach(headerText => {
@@ -135,20 +205,25 @@
                 headerRow.appendChild(header);
             })
 
-            table.appendChild(headerRow);
+            headerBody.appendChild(headerRow);
+            table.appendChild(headerBody);
+
+            var tableBody = document.createElement('tbody');
 
             nodes.forEach(node => {
                 let row = document.createElement('tr');
 
                 Object.values(node).forEach(text => {
                     let cell = document.createElement('td');
-                    let textNode = document.createTextNode(text);
+                    let textNode = document.createTextNode(text || "--");
                     cell.appendChild(textNode);
                     row.appendChild(cell);
                 })
 
-                table.appendChild(row);
+                tableBody.appendChild(row);
             });
+
+            table.appendChild(tableBody);
 
             document.querySelector('#sd_table_div').appendChild(table);
         }
@@ -183,12 +258,12 @@
 
                     // Closure to capture the file information.
                     function handleFile(f) {
-                        var $title = $("<h4>", {
-                            text: f.name
-                        });
-                        var $fileContent = $("<ul>");
-                        $result.append($title);
-                        $result.append($fileContent);
+                        //var $title = $("<h4>", {
+                            //text: f.name
+                        //});
+                        //var $fileContent = $("<ul>");
+                        //$result.append($title);
+                        //$result.append($fileContent);
 
                         var dateBefore = new Date();
                                     
@@ -200,43 +275,91 @@
                                         text: " (loaded in " + (dateAfter - dateBefore) + "ms)"
                                     }));
 
-                                    zip.forEach(function(relativePath, zipEntry) { // 2) print entries
-                                                //$fileContent.append($("<li>", {
-                                                //    text: zipEntry.name
-                                                //}));
-                                                if (zipEntry.name == "ucp-nodes.txt") {
-                                                    zipEntry.async('text').then(function(txt) {
-                                                            nodes = createNodeObjects(txt);
-                                                            createSDTable(nodes);
-                                                        })
-                                                    return false;
-                                                }
+                                    var entries = Object.keys(zip.files).map(function (name) {
+                                        return zip.files[name];
+                                    })
+
+                                    var listPromises = entries.map(function(entry) {
+                                        if (fileList.some(f => entry.name.includes(f)))
+                                        {
+                                            return entry.async("text").then(function(txt) {
+                                                return [entry.name, txt];
                                             });
-
-                                    zip.forEach(function(relativePath, zipEntry) { // get versions
-
-                                                if (zipEntry.name.split('/').slice(-1)[0].includes("dsinfo.txt")) {
-                                                    var hostname = zipEntry.name.split('/').slice(-3)[0];
-                                                    console.log(nodes);
-                                                    nodes.forEach(node => {
-                                                        console.log(node.hostname, hostname);
-                                                        if (node.hostname == hostname)
-                                                        {
-                                                            zipEntry.async('text').then(function(txt) {
-                                                                node.getVersions(txt);
-                                                            })
-                                                        }
-                                                    })
-                                                }
-                                            });
-
-                                    },
-                                    function(e) {
-                                        $result.append($("<div>", {
-                                            "class": "alert alert-danger",
-                                            text: "Error reading " + f.name + ": " + e.message
-                                        }));
+                                        }
                                     });
+
+                                    var promiseList = Promise.all(listPromises);
+
+                                    promiseList.then(function(list) {
+                                        var files = list.filter(function(elem) {
+                                            return elem !== undefined;
+                                        });
+
+                                        files.forEach(fileColl => {
+                                            if (fileColl[0].includes(fileList[0]))
+                                            {
+                                                nodes = createNodeObjects(fileColl[1]);
+                                            }
+                                        })
+
+                                        var dsinfo = files.filter(function(file) {
+                                            if (file[0].includes(fileList[1]))
+                                            {
+                                                return file;
+                                            }
+                                        });
+
+                                        var versionsMKE = files.filter(function(file) {
+                                            if (file[0].includes(fileList[2]) && file[0].endsWith(".txt"))
+                                            {
+                                                return file;
+                                            }
+                                        })
+
+                                        var versionsMSR = files.filter(function(file) {
+                                            if (file[0].includes(fileList[3]) && file[0].endsWith(".txt"))
+                                            {
+                                                return file;
+                                            }
+                                        })
+
+                                        nodes.forEach(node => {
+                                            dsinfo.forEach(dsi => {
+                                                if (dsi[0].includes(node.hostname))
+                                                {
+                                                    node.getOSDetails(dsi[1]);
+                                                }
+                                            })
+                                            versionsMKE.forEach(vrs => {
+                                                if (vrs[0].includes(node.hostname))
+                                                {
+                                                    node.getMKEVersions(JSON.parse(vrs[1]));
+                                                }
+                                            })
+                                            versionsMSR.forEach(vrs => {
+                                                if (vrs[0].includes(node.hostname))
+                                                {
+                                                    node.getMKEVersions(JSON.parse(vrs[1]));
+                                                }
+                                            })
+                                        })
+
+                                        nodes = nodes.sort(function(a, b) {
+                                            return a.hostname > b.hostname ? 1 : -1;
+                                            });
+
+                                        console.log(nodes);
+
+                                        createSDTable(nodes);
+                                    })
+
+                                },
+                                function(e) {
+                                    $result.append($("<div>", {
+                                        "class": "alert alert-danger",
+                                        text: "Error reading " + f.name + ": " + e.message
+                                    }));
+                                });
                             }
 
                     var files = evt.target.files;
