ADD: source link

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     <div id="sd_table_div">
     </div>
 
+    <div id="source">
+        <a href="https://github.com/th3geekguy/klabautermann/">source</a>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
